--- a/single_particle_laser.ipynb
+++ b/single_particle_laser.ipynb
@@ -22,7 +22,7 @@
     "import numpy as np\n",
     "from numpy import pi as pi\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.rcParams['text.usetex'] = True\n",
+    "# plt.rcParams['text.usetex'] = True\n",
     "from scipy import integrate as nt\n",
     "from scipy.special import erf"
    ]
